<resources>

    <!-- layout craps_ads -->

    <!-- layout craps_ads -->
    <string name="cargaAnuncio">Search coins</string>
    <string name="muestraAnuncio">Collect coins</string>
    <string name="monedero">Coins:</string>
    <string name="tituloDialog" translatable="false">Bonus</string>
    <string name="anuncioNoCargo">Coins no found yet, Be Patinent</string>
    <string name="anuncioCargado">You can collect the coins now</string>
    <string name="premio">You found 30 coins</string>
    <string name="cuentaAtrasBoton">Time Remaining</string>

    <!-- layout craps_play -->

    <string name="descDado1">Picture of the first dice</string>
    <string name="descDado2">Picture of the second dice</string>
    <string name="toastMoneda">coins</string>
    <string name="Doblar">Double</string>
    <string name="Salir">Exit</string>

    <string name="rondas">Round %d</string>

    <string-array name="dadosNormal">
        <item>normal1</item>
        <item>normal2</item>
        <item>normal3</item>
        <item>normal4</item>
        <item>normal5</item>
        <item>normal6</item>
    </string-array>

    <string-array name="dadosRojo">
        <item>dado_rojo1</item>
        <item>dado_rojo2</item>
        <item>dado_rojo3</item>
        <item>dado_rojo4</item>
        <item>dado_rojo5</item>
        <item>dado_rojo6</item>
    </string-array>

    <string-array name="dadosHuevos">
        <item>sarten1</item>
        <item>sarten2</item>
        <item>sarten3</item>
        <item>sarten4</item>
        <item>sarten5</item>
        <item>sarten6</item>
    </string-array>

    <string-array name="dadosLegendarios">
        <item>dado_legendario1</item>
        <item>dado_legendario2</item>
        <item>dado_legendario3</item>
        <item>dado_legendario4</item>
        <item>dado_legendario5</item>
        <item>dado_legendario6</item>
    </string-array>

    <!-- Java craps_play -->
    <string name="Apuesta">Bet %d</string>
    <string name="Apuesta_Inicial">Initial Bet 10 coins</string>
    <string name="MonedasInsu">Not enough coins</string>
    <string name="Perdiste">You Lose</string>

    <!-- layouts de registro y login -->
    <string name="registro">Register</string>
    <string name="nombre">Username</string>
    <string name="correo">Email</string>
    <string name="contra">Password</string>
    <string name="contra2">Repeat password</string>
    <string name="btnRegistrar">Register</string>
    <string name="btnInicio">Login</string>
    <string name="btnCrear">Create account</string>
    <!-- Iniciar Sesion Java-->
    <string name="NoExis">This User Dosent Exist </string>
    <string name="ContraInco">Wrong Pass</string>
    <!-- Registro Java-->
    <string name="NuevoUsu">New User Saved</string>
    <string name="NombreRepe">Name Already Exist or not valid</string>
    <string name="Complete">Complete all fields</string>


    <!-- menu -->
    <string name="txtCerrarSesion"><u>Logout</u></string>
    <string name="usuario">Guest</string>

    <!-- accesibilidad -->
    <string name="imgAvatar">Avatar</string>
    <string name="imgMoneda">Coin</string>
    <string name="btnJugar">Play</string>
    <string name="btnColeccion">Colletion</string>
    <string name="btnTienda">Shop</string>
    <string name="btnSalir">Exit</string>
    <string name="btnRegist">Log on</string>
    <string name="btnLogin">Log in</string>
    <string name="btnBMoneda">Search coins</string>
    <string name="btnRMoneda">Recoger monedas</string>
    <string name="btnAyuda">Ayuda</string>
    <string name="btnMoneda">Conseguir monedas</string>
    <string name="btnSeguir">Seguir</string>
    <string name="btnCrearC">Crear cuenta</string>
    <string name="dialog_title">Buy</string>
    <string name="dialog_message">do you goint to buy this article?</string>
    <string name="app_name" translatable="false">CrapsWorld</string>
    <string name="id_app_adTest" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="id_adTestBanner" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="id_adTestVideo" translatable="false">ca-app-pub-3940256099942544/5224354917</string>

    ---

    <!-- layout coleccion -->
    <string name="Avatar">Avatars</string>
    <string name="Skins" translatable="false">Skins</string>
    <!-- java coleccion-->
    <string name="Yaequipado">Already Equipped</string>
    <string name="invitDetect">Invitado detected</string>
    <string name="equipado">Equipped</string>
    <!-- java Tienda-->
    <string name="Yatienes">You already have it!</string>
    <string name="WIP" translatable="false">WIP!</string>
    <!-- Tutorial-->
    <string name="tuto">-You win: \n
        <u>First round:</u> \n
        You win with 11,7  \n
        You lose with 2,13,12 \n
        <u>Following Rounds</u> \n
        You win: same value as First round \n
        You lose with 7 \n
        </string>


</resources>
