<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/conteiners_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    xmlns:android="http://schemas.android.com/apk/res/android">


        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre" />

        <EditText
            android:id="@+id/txtusuario"
            android:hint="@string/hintNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />


        <TextView
            android:id="@+id/tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contra" />

        <EditText
            android:id="@+id/txtclave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />


    <Button
        android:id="@+id/ingresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Cargar"
        android:text="@string/btnInicio" />

    <Button
        android:id="@+id/crearCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="irRegistro"
        android:text="@string/btnCrear" />
    </LinearLayout>

</ScrollView>